# agentitest

./: .env.example  .gitignore  Android_BaseAgentTest_実装計画書.md  Android_テスト高速化分析報告書.md  BaseAgentTest_仕様書.md  Mobile-MCP_仕様書.md  Mobile-MCP_自動テスト効率化設計書.md  Phase1_実装進捗分析報告書.md  README.md  android_base_agent_test.py  conftest.py  conftest_android.py  mobile_take_screenshot_only.py  pyproject.toml  pytest.ini  react_agent_test.py  requirements.txt  test_android_step_recording.py  test_chrome_yahoo_sports.py  test_community_website.py  test_device_initialization.py  test_nfbe.py  test_screenshot_debug.py  スクリーンショット修正報告書.md  スクリーンショット修正完了報告書.md  実装完了報告書.md
